opa/opa-test.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: opatest
spec:
  containers:
    - name: wget
      image: busybox
      command: ['sleep']
      args: ['300']
  restartPolicy: Never
